fix bug causing edit page populated data to misalign with the corresponding field

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,7 @@ form .form-group {
 }
 
 form .form-group label {
+  font-weight: bold;
   display: block;
   margin-bottom: 10px;
 }
